charon/tests/ui/unsupported/issue-165-vec-macro.out
error: Nullary operations are not supported
 --> tests/ui/unsupported/issue-165-vec-macro.rs:3:14
  |
3 |     let _v = vec![1];
  |              ^^^^^^^
  |
  = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

[ ERROR charon_driver:230] The extraction encountered 1 errors
Error: Charon driver exited with code 1
